Issue #3401834: Fix Request-URI Too Long 414 for deep level 4 or 5+ AJAX requests

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -249,6 +249,16 @@ body {
       }
     }
   }
+
+  .media-library-item__attributes {
+    background: transparent !important;
+  }
+
+  .media-library-item__remove,
+  .media-library-item .button.media-library-item__remove {
+    width: 1.5rem !important;
+    height: 1.5rem !important;
+  }
 }
 
 #drupal-off-canvas,
